# Cupid

./: .gitignore  README.md  dataset_adapter.py  demo.ipynb  demo.py  demo_condition.ipynb  environment.yml  eval.zsh  evaluation.ipynb  format.py  main.py  plot.ipynb  pyproject.toml  pyvenv.cfg  repe_wrapper.py  requirements.txt  task_list.txt  utils.py
AgentFactory/Models/: Claude.py  GPT.py
DeepL/: DeepL.ipynb  DeepL.py
IPIP/: DE.xlsx  EN.xlsx  JA.xlsx  MN.xlsx  ZH.xlsx
Questionnaire/: BigFIve.py  BigFive.py  HEXACO.py  IPIPtest.py  PsycoTest.py  __init__.py
configs/: agent_conf0.json  agent_conf1.json  conf_Claude.json  conf_DeepSeek.json  conf_GPT.json  conf_Gemini.json  conf_LLaMA3.json  conf_Qwen2.5.json  inference_conf0.json  inference_conf1.json  train_conf1.json  train_conf2.json  train_conf3.json  train_conf4.json  train_conf5.json
misc/: BFI_score.txt  tmp.txt
openai/: openai_demo.ipynb  openai_demo_cui.py  prompt.py
output/: BFI_GPT.jsonl  HEXACO_GPT.jsonl
output/GPT/DE/: 16PF.jsonl  6FPQ.jsonl  7FACTOR.jsonl  AB5C.jsonl  BFAS-20.jsonl  BFAS.jsonl  BIDR.jsonl  BIS_BAS.jsonl  Barchard2001.jsonl  Buss1980.jsonl  CAT-PD.jsonl  CPI.jsonl  Cacioppo1982.jsonl  Chapman1986.jsonl  Foa1998.jsonl  Foa2002.jsonl  Goldberg1999.jsonl  HEXACO_PI.jsonl  HPI-HIC.jsonl  HPI.jsonl  Hoyle2002.jsonl  IPIP-IPC.jsonl  JPI.jsonl  Levenson1981.jsonl  MPQ.jsonl  NEO.jsonl  NEO5-20.jsonl  ORAIS.jsonl  ORVIS.jsonl  TCI.jsonl  (+7 more)
src/: Agent.py  LLM.py  app.py  emotion.ipynb  emotion.py  eval.py  main.py  train.py  train_single_card.py  utils.py
src/templates/: index.html
(+150 files in other folders)
